<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GUI.EnterPriceFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_enter_price_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/spacing_sides" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_enter_price_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/spacing_sides" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_enter_price_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/spacing_top_and_bottom" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_enter_price_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/spacing_top_and_bottom" />

    <TextView
        android:id="@+id/storeField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guideline_enter_price_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_enter_price_top"
        tools:text="Kauppa: Punkten" />

    <TextView
        android:id="@+id/productField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guideline_enter_price_left"
        app:layout_constraintTop_toBottomOf="@+id/storeField"
        tools:text="Viivakoodi: 1234567" />

    <TextView
        android:id="@+id/nameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/guideline_enter_price_left"
        app:layout_constraintTop_toBottomOf="@+id/productField"
        tools:text="Haetaan tuotenimeä..." />

    <TextView
        android:id="@+id/enterPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_enter_price"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_enter_price_bottom"
        app:layout_constraintStart_toStartOf="@+id/guideline_enter_price_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_enter_price_top" />

    <EditText
        android:id="@+id/enterEuros"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:digits="0123456789\n.,"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/label_euros"
        app:layout_constraintStart_toStartOf="@+id/guideline_enter_price_left"
        app:layout_constraintTop_toBottomOf="@+id/enterPriceText" />

    <TextView
        android:id="@+id/label_euros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:labelFor="@id/enterEuros"
        android:text="@string/text_euro_sign"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/enterEuros"
        app:layout_constraintEnd_toStartOf="@+id/enterCents"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/enterEuros"
        app:layout_constraintTop_toTopOf="@+id/enterEuros" />

    <EditText
        android:id="@+id/enterCents"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/label_euros"
        app:layout_constraintEnd_toStartOf="@+id/label_cents"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/label_euros"
        app:layout_constraintTop_toTopOf="@+id/label_euros" />

    <TextView
        android:id="@+id/label_cents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:labelFor="@id/enterCents"
        android:text="@string/text_cents"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/enterCents"
        app:layout_constraintEnd_toStartOf="@+id/sendPriceBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/enterCents"
        app:layout_constraintTop_toTopOf="@+id/enterCents" />

    <Button
        android:id="@+id/sendPriceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/button_send"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/label_cents"
        app:layout_constraintEnd_toStartOf="@+id/guideline_enter_price_right"
        app:layout_constraintStart_toEndOf="@+id/label_cents"
        app:layout_constraintTop_toTopOf="@+id/label_cents" />

    <EditText
        android:id="@+id/enterProductNameField"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/TuotteenNimenSyottoOhje"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/sendProdNameBtn"
        app:layout_constraintStart_toStartOf="@+id/guideline_enter_price_left"
        app:layout_constraintTop_toBottomOf="@+id/nameField"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/sendProdNameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_product_name"
        app:layout_constraintBottom_toBottomOf="@+id/enterProductNameField"
        app:layout_constraintEnd_toStartOf="@+id/guideline_enter_price_right"
        app:layout_constraintTop_toTopOf="@+id/enterProductNameField" />

</androidx.constraintlayout.widget.ConstraintLayout>
